--- a/servlet/web/views/s.html
+++ b/servlet/web/views/s.html
@@ -8,5 +8,12 @@
 <h1>welcome...</h1>
 <a href="/para?na=sd&g=90&na=sd&g=90&g=33&y=爽肤水搜索s">para</a>
 
+<h1> forward... </h1>
+<a href="/forward">forward...</a>
+<h1>cookie...</h1>
+<a href="/cookie">cookie... </a>
+<h1>session...</h1>
+<a href="/session">session... </a>
+
 </body>
 </html>
