student crud proj test

--- a/student/web/views/addStu.html
+++ b/student/web/views/addStu.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-<form action="/add">
+<form action="/addStu" method="post">
     姓名: <input type="text" name="sname"> <br>
-    年龄: <input type="text" name="birthday"> <br>
-    性别: <input type="radio" name="gender" value="M">男 <input type="radio" name="gender" value="F">   <br>
+    年龄: <input type="date" name="birthday"> <br>
+    性别: <input type="radio" name="gender" value="M">男 <input type="radio" name="gender" value="F">女  <br>
     电话: <input type="tel" name="phone"> <br>
     爱好: <input type="text" name="hobby"> <br>
     其他信息: <input type="text" name="info"> <br>
