--- a/student/web/views/stuList.html
+++ b/student/web/views/stuList.html
@@ -8,7 +8,6 @@
 
 </head>
 <body>
-
 <div id="app">
     <h1>学生列表</h1>
 
@@ -16,7 +15,7 @@
 
         <li class="item header">
         <span class="cell">姓名 </span>
-        <span class="cell">年龄 </span>
+        <span class="cell">生日 </span>
         <span class="cell">性别 </span>
         <span class="cell">电话 </span>
         <span class="cell">爱好 </span>
@@ -32,6 +31,7 @@
             <span class="cell"> {{ item.info }} </span>
             <span class="cell">
                 <a href="/views/addStu.html">添加学生</a>
+                <button @click="updateStu(item.id)">更新</button>
                 <button @click="delStuById(item.id)">删除</button>
             </span>
         </li>
@@ -68,9 +68,19 @@ let vm = new Vue({
             return `${date.getFullYear()}年${date.getMonth()}月${date.getDate()}日`
         },
         async delStuById(stuId){
-            return console.log(stuId);
-            let res = await fetch(`/del?id=${stuId}`).then(r => r.json());
+            let conf = confirm('是否删除');
+            if(!conf) return;
+
+            let res = await fetch(`/delStu?id=${stuId}`).then(r => r.json());
             console.log(res);
+            if(res.code > 0) {
+                this.getData();
+            } else {
+                alert('失败');
+            }
+        },
+        updateStu(id){
+            window.location = '/views/updateStu.html?id=' + id;
         }
 
 
