--- a/servlet/web/views/s.html
+++ b/servlet/web/views/s.html
@@ -14,6 +14,8 @@
 <a href="/cookie">cookie... </a>
 <h1>session...</h1>
 <a href="/session">session... </a>
+<h1>create session...</h1>
+<a href="/created">create session... </a>
 
 </body>
 </html>
