--- a/autoLoginTest/web/views/login.html
+++ b/autoLoginTest/web/views/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<form action="" method="post">
+<form action="/login" method="post">
     账号: <input type="text" name="username"> <br>
     密码: <input type="password" name="password"> <br>
     <input type="checkbox" name="auto_login"> 自动登录 <br>
