--- a/student/web/views/addStu.html
+++ b/student/web/views/addStu.html
@@ -10,7 +10,7 @@
 <div id="app">
 
         姓名: <input type="text" name="sname" v-model="formData.sname"> <br>
-        年龄: <input type="date" name="birthday" v-model="formData.birthday"> <br>
+        年龄: <input type="birthday" name="birthday" v-model="formData.birthday"> <br>
         性别: <input type="radio" name="gender" value="M" v-model="formData.gender">男
              <input type="radio" name="gender" value="F" v-model="formData.gender">女  <br>
         电话: <input type="tel" name="phone" v-model="formData.phone"> <br>
