--- a/student/web/views/updateStu.html
+++ b/student/web/views/updateStu.html
@@ -10,7 +10,7 @@
 
 <div id="app">
     姓名: <input type="text" name="sname" v-model="formData.sname"> <br>
-    年龄: <input type="date" name="birthday" v-model="formData.birthday"> <br>
+    年龄: <input type="birthday" name="birthday" v-model="formData.birthday"> <br>
     性别: <input type="radio" name="gender" value="M" v-model="formData.gender">男
          <input type="radio" name="gender" value="F" v-model="formData.gender">女  <br>
     电话: <input type="tel" name="phone" v-model="formData.phone"> <br>
@@ -91,11 +91,11 @@
                      }).catch(e => console.log(e));
             },
             formatDay(mils){
-                let date = new Date(mils);
+                let birthday = new Date(mils);
 
-                let y = date.getFullYear();
-                let m = date.getMonth();
-                let d = date.getDate();
+                let y = birthday.getFullYear();
+                let m = birthday.getMonth();
+                let d = birthday.getDate();
 
                 m = m < 10 ? '0'+m : m;
                 d = d < 10 ? '0'+d : d;
