--- a/struts/web/views/save.html
+++ b/struts/web/views/save.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>success</title>
+    <title>save</title>
 </head>
 <body>
 
-<h1>success</h1>
+<h1>save</h1>
 
 </body>
 </html>
