--- a/struts/web/views/struts.html
+++ b/struts/web/views/struts.html
@@ -5,7 +5,24 @@
     <title>struts</title>
 </head>
 <body>
-<h1> struts ... </h1>
-<a href="/hello.action">struts 入门 </a>
+<h1> struts 入门 ... </h1>
+<a href="/hello.action">默认</a>
+<a href="/find.action">find </a>
+<a href="/update.action">update </a>
+<a href="/delete.action">delete </a>
+<a href="/save.action">save </a>
+<hr>
+<h1>通配符****</h1>
+<a href="/product_find.action">find </a>
+<a href="/product_update.action">update </a>
+<a href="/product_delete.action">delete </a>
+<a href="/product_save.action">save </a>
+<hr>
+<h1>动态方法访问****</h1>
+<a href="/customer!find.action">find </a>
+<a href="/customer!update.action">update </a>
+<a href="/customer!delete.action">delete </a>
+<a href="/customer!save.action">save </a>
+
 </body>
 </html>
