--- a/struts/web/views/struts.html
+++ b/struts/web/views/struts.html
@@ -24,5 +24,9 @@
 <a href="/customer!delete.action">delete </a>
 <a href="/customer!save.action">save </a>
 
+<hr>
+<hr>
+<a href="/views/servlet.api/forms.html">测试表单</a>
+
 </body>
 </html>
